k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sspj-app-service
spec:
  type: LoadBalancer
  selector:
    app: sspj-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
